<resources>
    <string name="app_name">Logica</string>
    <string name="textviewcase">Conjunction (AND)</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="answer">Answer</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="Disjunction">Disjunction (OR)</string>
    <string name="Conditional">Conditional</string>
</resources>
